--- a/samconfig.toml
+++ b/samconfig.toml
@@ -6,7 +6,7 @@ stack_name = "aws-lambda-custom-docker"
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-1dakp13tc81dv"
 s3_prefix = "aws-lambda-custom-docker"
 region = "eu-central-1"
-profile = "serverless-bert"
+profile = "deepracer9"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
 
