Change to rio account

--- a/samconfig.toml
+++ b/samconfig.toml
@@ -11,3 +11,14 @@ confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
 
 
+
+[default]
+[default.deploy]
+[default.deploy.parameters]
+stack_name = "ethan-stack"
+s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-vf2349ffygur"
+s3_prefix = "ethan-stack"
+region = "ap-southeast-2"
+profile = "deepracer9"
+capabilities = "CAPABILITY_NAMED_IAM"
+image_repositories = []
