--- a/template.yaml
+++ b/template.yaml
@@ -12,7 +12,7 @@ Resources:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
       FunctionName: MyCustomDocker
-      ImageUri: 891511646143.dkr.ecr.eu-central-1.amazonaws.com/docker-lambda:latest
+      ImageUri: 725119571431.dkr.ecr.ap-southeast-2.amazonaws.com/docker-lambda:latest
       PackageType: Image
       Events:
         HelloWorld:
@@ -20,32 +20,7 @@ Resources:
           Properties:
             Path: /hello
             Method: get
-      # ImageConfig:
-      #   WorkingDirectory: /var/task
-      #   Command: /bin/sh
-      #   EntryPoint: 'echo hello world!'
-  # HelloWorldFunction:
-  #   Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
-  #   Properties:
-  #     PackageType: Image
-  #     # ImageConfig:
-  #       # Uncomment this to override command here from the Dockerfile
-  #       # Command: ["app.lambda_handler"]
-  #     Events:
-  #       HelloWorld:
-  #         Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
-  #         Properties:
-  #           Path: /hello
-  #           Method: get
-  #   Metadata:
-  #     DockerTag: {{cookiecutter.runtime}}-v1
-  #     DockerContext: ./hello_world
-  #     Dockerfile: Dockerfile
-
 Outputs:
-  # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
-  # Find out more about other implicit resources you can reference within SAM
-  # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
   MyCustomDockerApi:
     Description: 'API Gateway endpoint URL for Prod stage for Hello World function'
     Value: !Sub 'https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/'
